[package]
name = "kmeans-wasm"
version = "2.0.10"
authors = ["Serhii Pylypchuk <sergiydjan@gmail.com>"]
edition = "2018"
repository = "https://github.com/ycatbink0t/kmeans-wasm"
homepage = "https://github.com/ycatbink0t/kmeans-wasm"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.84"
js-sys = "0.3.61"
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
getrandom = { version = "*", features = ["js"] }
rand = "*"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
criterion = "0.3"

[profile.release]
opt-level = 3
lto = true
panic = 'abort'
strip = true
codegen-units = 1

[[bench]]
name = "kmeans_rgb"
harness = false
